--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "mysql2": "^3.6.1",
         "nodemailer": "^6.9.7",
         "nodemon": "^3.0.1",
+        "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
         "pm2": "^5.3.0",
         "sequelize": "^6.33.0",
         "sharp": "^0.32.6",
