--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.433.0",
         "@aws-sdk/lib-storage": "^3.433.0",
+        "axios": "^1.7.2",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
