--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "express-validator": "^7.0.1",
         "formidable": "^2.1.2",
         "jsonwebtoken": "^9.0.2",
+        "moment": "^2.30.1",
         "mysql2": "^3.6.1",
         "nodemailer": "^6.9.7",
         "nodemon": "^3.0.1",
